@@ -1,0 +1,2 @@
+-- Drop name duplicate unique index
+ALTER TABLE city DROP INDEX name_2;
