@@ -1,0 +1,2 @@
+-- Drop unique index on city name
+ALTER TABLE city DROP INDEX name;
