@@ -83,3 +83,6 @@
 /city_type/create_records.sql
 /city/add_city_type_id.sql
 /city/add_foreign_key_to_city_type.sql
+/city/drop_name_unique_index.sql
+/city/drop_name_duplicate_unique_index.sql
+/city/add_name_fips_unique_index.sql
